--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
   <title>{% block seo_title %}{% endblock %}</title>
   <meta name="description" content="{% block seo_description %}{% endblock %}">
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
 <body>
   {% block content %}
   {% endblock %}
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
