--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -5,6 +5,6 @@
 
 {% block content %}
 <h1>{{post.title}}</h1>
-<p>{{post.category}}</p>
+<p><a href="{% url 'blog:category_detail' slug=post.category.slug %}">{{post.category}}</a></p>
 {{post.body}}
 {% endblock %}
